# Halgorithms

./: Halgorithms.cabal  README.markdown  halgorithms.cabal
sorting/: Sorting.hs
src/Common/: References.hs
src/Sorting/: Heap.hs  Insertion.hs  Merge.hs  MergeBU.hs  MergeTD.hs  Quick.hs  Quick3.hs  Selection.hs  Shell.hs  Sorting.hs
src/Unionfind/: UnionFind.hs
test/Sorting/: HeapSpec.hs  InsertionSpec.hs  MergeBUSpec.hs  MergeTDSpec.hs  Quick3Spec.hs  QuickSpec.hs  SelectionSpec.hs  ShellSpec.hs
unionfind/: UnionFind.hs
