name:                halgorithms
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Halgorithms#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sorting.Selection
                     , Sorting.MergeTD
                     , Sorting.MergeBU
                     , Sorting.Quick
                     , Sorting.Quick3
                     , Sorting.Insertion
                     , Sorting.Heap
                     , Sorting.Shell
                     , Sorting.Sorting
  build-depends:       base >= 4.7 && < 5
                     , vector >= 0.11 && < 0.12
                     , primitive >= 0.6 && < 0.7
  default-language:    Haskell2010

executable halgorithms-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , halgorithms
  default-language:    Haskell2010

test-suite halgorithms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec >= 2.2 && < 2.3
                     , QuickCheck >= 2.8 && < 2.9
                     , vector >= 0.11 && < 0.12
                     , halgorithms
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Halgorithms
